# Mealy-Verifier

./: Cargo.toml  Readme.md  run.sh  rustfmt.toml
info/: events.md  opcua.md
info/proof/: Makefile  main.tex  proof.tex
info/properties/: Conditional.md  ExpectedEventIndex.md  ExpectedEventSequence.md  Output.md  RestrictedEvent.md  SinkTarget.md  SinkTermination.md
model/raw model/ssh/: BitVise.dot  DropBear.dot  OpenSSH.dot
model/ready_to_verify/ssh_models/: clean.py
result/06688aa042200ded72b31646dbc1e584b0b306eaa5efc316bcdd4600b9de99e1_automata.dot/reject_anonymous_session/: ce.dot
result/06688aa042200ded72b31646dbc1e584b0b306eaa5efc316bcdd4600b9de99e1_automata.dot/restricted_address_space_access/: 0_ce.dot
result/0e99486770962b1e3a19cd6c242dd7792798c2fc91dfe235409cc59a82252724_automata.dot/Hello_first/: ce.dot
result/0e99486770962b1e3a19cd6c242dd7792798c2fc91dfe235409cc59a82252724_automata.dot/channel_mandatory_second/: ce.dot
result/0e99486770962b1e3a19cd6c242dd7792798c2fc91dfe235409cc59a82252724_automata.dot/hello_secure_channel_sequence/: ce.dot
result/0e99486770962b1e3a19cd6c242dd7792798c2fc91dfe235409cc59a82252724_automata.dot/no_encryption_no_signature_reject_read_write/: ce.dot
result/0e99486770962b1e3a19cd6c242dd7792798c2fc91dfe235409cc59a82252724_automata.dot/restricted_address_space_access/: 0_ce.dot  1_ce.dot
rules/: opcua.opcua  ssh  test
src/: cli.rs  main.rs
src/graph/: edgemap.rs  element.rs  mod.rs  multi_edge.rs  node.rs  nodeid.rs
src/utils/: mod.rs  output.rs  reader.rs
src/verifier/: event.rs  mod.rs  premise.rs
(+225 files in other folders)
